# Pr-Agent-NULP

./: .gitignore  Dockerfile  LAB_PROMPTS_JSON.json  README.md  SETUP.md  STUDENT_GUIDE.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: TEMPLATE-review.yml
src/: runner.py
src/clients/: gemini.py  github.py
src/configs/: gemini.py  github.py  google.py
src/models/google/: entity.py
src/models/llm/: tools.py
src/services/ai/: service.py
src/services/git/: service.py
src/services/google/: service.py
src/services/prompt/: service.py
src/utils/enums/: sheets.py
